--- a/angular.json
+++ b/angular.json
@@ -1,130 +1,6 @@
 {
 	"version": 1,
 	"projects": {
-		"visual-ts": {
-			"projectType": "application",
-			"schematics": {
-				"@nrwl/angular:component": {
-					"style": "scss"
-				}
-			},
-			"root": "apps/visual-ts",
-			"sourceRoot": "apps/visual-ts/src",
-			"prefix": "visual-ts",
-			"architect": {
-				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
-					"options": {
-						"outputPath": "dist/apps/visual-ts",
-						"index": "apps/visual-ts/src/index.html",
-						"main": "apps/visual-ts/src/main.ts",
-						"polyfills": "apps/visual-ts/src/polyfills.ts",
-						"tsConfig": "apps/visual-ts/tsconfig.app.json",
-						"aot": true,
-						"assets": [
-							"apps/visual-ts/src/favicon.ico",
-							"apps/visual-ts/src/assets"
-						],
-						"styles": ["apps/visual-ts/src/styles.scss"],
-						"scripts": []
-					},
-					"configurations": {
-						"production": {
-							"fileReplacements": [
-								{
-									"replace": "apps/visual-ts/src/environments/environment.ts",
-									"with": "apps/visual-ts/src/environments/environment.prod.ts"
-								}
-							],
-							"optimization": true,
-							"outputHashing": "all",
-							"sourceMap": false,
-							"extractCss": true,
-							"namedChunks": false,
-							"extractLicenses": true,
-							"vendorChunk": false,
-							"buildOptimizer": true,
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "2mb",
-									"maximumError": "5mb"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "6kb",
-									"maximumError": "10kb"
-								}
-							]
-						}
-					}
-				},
-				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
-					"options": {
-						"browserTarget": "visual-ts:build",
-						"proxyConfig": "apps/visual-ts/proxy.conf.json"
-					},
-					"configurations": {
-						"production": {
-							"browserTarget": "visual-ts:build:production"
-						}
-					}
-				},
-				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "visual-ts:build"
-					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": [
-							"apps/visual-ts/tsconfig.app.json",
-							"apps/visual-ts/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**", "!apps/visual-ts/**/*"]
-					}
-				},
-				"test": {
-					"builder": "@nrwl/jest:jest",
-					"options": {
-						"jestConfig": "apps/visual-ts/jest.config.js",
-						"tsConfig": "apps/visual-ts/tsconfig.spec.json",
-						"passWithNoTests": true,
-						"setupFile": "apps/visual-ts/src/test-setup.ts"
-					}
-				}
-			}
-		},
-		"visual-ts-e2e": {
-			"root": "apps/visual-ts-e2e",
-			"sourceRoot": "apps/visual-ts-e2e/src",
-			"projectType": "application",
-			"architect": {
-				"e2e": {
-					"builder": "@nrwl/cypress:cypress",
-					"options": {
-						"cypressConfig": "apps/visual-ts-e2e/cypress.json",
-						"tsConfig": "apps/visual-ts-e2e/tsconfig.e2e.json",
-						"devServerTarget": "visual-ts:serve"
-					},
-					"configurations": {
-						"production": {
-							"devServerTarget": "visual-ts:serve:production"
-						}
-					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": ["apps/visual-ts-e2e/tsconfig.e2e.json"],
-						"exclude": ["**/node_modules/**", "!apps/visual-ts-e2e/**/*"]
-					}
-				}
-			}
-		},
 		"api": {
 			"root": "apps/api",
 			"sourceRoot": "apps/api/src",
@@ -193,7 +69,10 @@
 							"libs/api-interfaces/tsconfig.lib.json",
 							"libs/api-interfaces/tsconfig.spec.json"
 						],
-						"exclude": ["**/node_modules/**", "!libs/api-interfaces/**/*"]
+						"exclude": [
+							"**/node_modules/**",
+							"!libs/api-interfaces/**/*"
+						]
 					}
 				},
 				"test": {
