--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,13 @@
 		},
 		"api-interfaces": {
 			"tags": []
+		},
+		"web": {
+			"tags": []
+		},
+		"web-e2e": {
+			"tags": [],
+			"implicitDependencies": ["web"]
 		}
 	}
 }
