--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@nrwl/angular": "9.4.5",
 		"@angular/animations": "^9.1.0",
 		"@angular/common": "^9.1.0",
 		"@angular/compiler": "^9.1.0",
@@ -39,37 +38,39 @@
 		"@angular/platform-browser": "^9.1.0",
 		"@angular/platform-browser-dynamic": "^9.1.0",
 		"@angular/router": "^9.1.0",
-		"rxjs": "~6.5.4",
-		"zone.js": "^0.10.2",
 		"@nestjs/common": "^6.8.3",
 		"@nestjs/core": "^6.8.3",
 		"@nestjs/platform-express": "^6.8.3",
-		"reflect-metadata": "^0.1.13"
+		"@nrwl/angular": "9.4.5",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "~6.5.4",
+		"ts-morph": "^7.1.2",
+		"zone.js": "^0.10.2"
 	},
 	"devDependencies": {
+		"@angular-devkit/build-angular": "0.901.0",
 		"@angular/cli": "9.1.0",
-		"@nrwl/workspace": "9.4.5",
-		"@types/node": "~8.9.4",
-		"dotenv": "6.2.0",
-		"ts-node": "~7.0.0",
-		"tslint": "~6.0.0",
-		"eslint": "6.8.0",
-		"typescript": "~3.8.3",
-		"prettier": "2.0.4",
-		"@nrwl/nest": "9.4.5",
 		"@angular/compiler-cli": "^9.1.0",
 		"@angular/language-service": "^9.1.0",
-		"@angular-devkit/build-angular": "0.901.0",
-		"codelyzer": "~5.0.1",
-		"jest-preset-angular": "8.1.2",
-		"@nrwl/jest": "9.4.5",
-		"jest": "25.2.3",
-		"@types/jest": "25.1.4",
-		"ts-jest": "25.2.1",
-		"cypress": "^4.1.0",
-		"@nrwl/cypress": "9.4.5",
-		"@nrwl/node": "9.4.5",
 		"@nestjs/schematics": "^6.7.0",
-		"@nestjs/testing": "^6.8.3"
+		"@nestjs/testing": "^6.8.3",
+		"@nrwl/cypress": "9.4.5",
+		"@nrwl/jest": "9.4.5",
+		"@nrwl/nest": "9.4.5",
+		"@nrwl/node": "9.4.5",
+		"@nrwl/workspace": "9.4.5",
+		"@types/jest": "25.1.4",
+		"@types/node": "~8.9.4",
+		"codelyzer": "~5.0.1",
+		"cypress": "^4.1.0",
+		"dotenv": "6.2.0",
+		"eslint": "6.8.0",
+		"jest": "25.2.3",
+		"jest-preset-angular": "8.1.2",
+		"prettier": "2.0.4",
+		"ts-jest": "25.2.1",
+		"ts-node": "~7.0.0",
+		"tslint": "~6.0.0",
+		"typescript": "~3.8.3"
 	}
 }
