--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@nestjs/core": "^6.8.3",
 		"@nestjs/platform-express": "^6.8.3",
 		"@nrwl/angular": "9.4.5",
+		"d3": "^5.16.0",
+		"dagre-d3": "^0.6.4",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "~6.5.4",
 		"ts-morph": "^7.1.2",
@@ -59,6 +61,8 @@
 		"@nrwl/nest": "9.4.5",
 		"@nrwl/node": "9.4.5",
 		"@nrwl/workspace": "9.4.5",
+		"@types/d3": "^5.7.2",
+		"@types/dagre-d3": "^0.4.39",
 		"@types/jest": "25.1.4",
 		"@types/node": "~8.9.4",
 		"codelyzer": "~5.0.1",
