--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@nestjs/core": "^6.8.3",
 		"@nestjs/platform-express": "^6.8.3",
 		"@nrwl/angular": "9.4.5",
+		"@swimlane/ngx-graph": "^7.0.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "~6.5.4",
 		"ts-morph": "^7.1.2",
@@ -49,6 +50,7 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "0.901.0",
+		"@angular/cdk": "^10.0.2",
 		"@angular/cli": "9.1.0",
 		"@angular/compiler-cli": "^9.1.0",
 		"@angular/language-service": "^9.1.0",
