--- a/libs/vscode/package.json
+++ b/libs/vscode/package.json
@@ -1,4 +1,32 @@
 {
 	"name": "@visual-ts/vscode",
-	"version": "0.0.1"
+	"displayName": "VisualTs",
+	"description": "Typescript Visualizer",
+	"version": "0.0.1",
+	"engines": {
+		"vscode": "^1.47.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onCommand:visual-ts.helloWorld"
+	],
+	"main": "../dist/libs/vscode/lib/extension.js",
+	"contributes": {
+		"commands": [
+			{
+				"command": "visual-ts.helloWorld",
+				"title": "Hello World"
+			}
+		]
+	},
+	"scripts": {
+		// "vscode:prepublish": "npm run compile",
+		// "compile": "tsc -p ./",
+		// "lint": "eslint src --ext ts",
+		// "watch": "tsc -watch -p ./",
+		// "pretest": "npm run compile && npm run lint",
+		// "test": "node ./out/test/runTest.js"
+	}
 }
