--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
 	"name": "visual-ts",
 	"version": "0.0.0",
 	"license": "MIT",
+	"engines": {
+		"vscode": "^1.47.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onCommand:visual-ts.helloWorld"
+	],
+	"main": "./dist/libs/vscode/lib/extension.js",
+	"contributes": {
+		"commands": [
+			{
+				"command": "visual-ts.helloWorld",
+				"title": "Hello World"
+			}
+		]
+	},
 	"scripts": {
 		"ng": "nx",
 		"postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
@@ -73,6 +91,9 @@
 		"ts-jest": "25.2.1",
 		"ts-node": "~7.0.0",
 		"tslint": "~6.0.0",
-		"typescript": "~3.8.3"
+		"typescript": "~3.8.3",
+		"@types/vscode": "^1.47.0",
+		"@types/glob": "^7.1.1",
+		"glob": "^7.1.6"
 	}
 }
