--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"test": "ng test",
 		"lint": "nx workspace-lint && ng lint",
 		"e2e": "ng e2e",
-		"build:vscode": "nx build vscode",
+		"build:vscode": "nx build presenter && nx build vscode",
 		"affected:apps": "nx affected:apps",
 		"affected:libs": "nx affected:libs",
 		"affected:build": "nx affected:build",
